--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Aiperdlbg</title>
+    <title>
+      Aiperdlbg | Africa Institute for Policy Evaluation Research and
+      Development.
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
