--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Africa Institute for Policy Evaluation Research and
+      Development"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
@@ -15,7 +16,7 @@
 
     <title>
       Aiperdlbg | Africa Institute for Policy Evaluation Research and
-      Development.
+      Development
     </title>
   </head>
   <body>
